# open-r1

./: .gitignore  download_dataset.py  pyproject.toml  requirements.in  spack.yaml
slurm/: sft.slurm
src/open_r1/: sft.py
