[project]
name = "open-r1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.43.0",
    "black>=24.4.2",
    "datasets>=3.2.0",
    "deepspeed==0.15.4",
    "distilabel[openai,ray,vllm]>=1.5.2",
    "einops>=0.8.0",
    "flake8>=6.0.0",
    "hf-transfer>=0.1.4",
    "huggingface-hub[cli]>=0.19.2,<1.0",
    "isort>=5.12.0",
    "liger-kernel==0.5.2",
    "lighteval[math]>=0.5.0",
    "math-verify>=0.3.2",
    "packaging>=23.0",
    "parameterized>=0.9.0",
    "pytest>=8.3.4",
    "safetensors>=0.3.3",
    "sentencepiece>=0.1.99",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers",
    "trl",
    "vllm==0.6.6.post1",
    "wandb>=0.19.1",
]

[tool.uv.sources]
lighteval = { path = "../deps/lighteval" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "main" }
trl = { git = "https://github.com/huggingface/trl.git", rev = "main" }
